# Machine_learning_group6

./: README.md
challenge_1/: .gitignore  README.md  gpu.py  pyproject.toml  sweep_configs.json  torch  venture2.py  venture_dqn.py
challenge_1/logs/breakout_dqn/: events.out.tfevents.1775264513.nahin-jpm.57805.0  events.out.tfevents.1775264650.nahin-jpm.58625.0  events.out.tfevents.1775264766.nahin-jpm.59355.0
challenge_1/logs/venture_dqn/: events.out.tfevents.1775097804.nahin-jpm.92784.0  events.out.tfevents.1775151727.nahin-jpm.66287.0  events.out.tfevents.1775155764.nahin-jpm.71119.0  events.out.tfevents.1775158338.nahin-jpm.75416.0  events.out.tfevents.1775158362.nahin-jpm.75616.0  events.out.tfevents.1775158390.nahin-jpm.75683.0  events.out.tfevents.1775158430.nahin-jpm.76671.0  events.out.tfevents.1775158554.nahin-jpm.77880.0  events.out.tfevents.1775158607.nahin-jpm.78794.0  events.out.tfevents.1775164829.nahin-jpm.93282.0  events.out.tfevents.1775175981.nahin-jpm.115498.0  events.out.tfevents.1775176077.nahin-jpm.117331.0  events.out.tfevents.1775226503.nahin-jpm.7912.0  events.out.tfevents.1775226997.nahin-jpm.9518.0  events.out.tfevents.1775229404.nahin-jpm.16169.0  events.out.tfevents.1775229639.nahin-jpm.18180.0  events.out.tfevents.1775229966.nahin-jpm.18870.0  events.out.tfevents.1775230236.nahin-jpm.3960.0  events.out.tfevents.1775230314.nahin-jpm.4931.0  events.out.tfevents.1775230704.nahin-jpm.7879.0  events.out.tfevents.1775326025.nahin-jpm.5011.0  events.out.tfevents.1775326105.nahin-jpm.5207.0
challenge_1/test/: sweep_configs.json  venture_dqn.py
challenge_2/: README.md  experiments.json  main_experiment.py  main_experiment_binary.py  pyproject.toml
challenge_2/results_binary/baseline_lr/: model_last_seed.pkl  results.csv  scaler_last_seed.pkl
challenge_2/results_binary/baseline_rf/: results.csv
challenge_2/results_binary/ssl_self_training_lr/: model_last_seed.pkl  results.csv  scaler_last_seed.pkl
challenge_2/results_binary/ssl_self_training_rf/: results.csv  scaler_last_seed.pkl
challenge_2/results_final/: comparison_summary.csv
challenge_2/results_final/baseline_lr/: model_last_seed.pkl  results.csv  scaler_last_seed.pkl
challenge_2/results_final/baseline_rf/: results.csv
challenge_2/results_final/ssl_self_training_lr/: model_last_seed.pkl  results.csv  (+1 more)
(+38 files in other folders)
