[project]
name = "venture-dqn challenge 1"
version = "0.1.0"
description = "This is our solution for the challenge #1 for the Machine Learning Class"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "GNU/GPL 3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "ale-py (>=0.11.2,<0.12.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "stable-baselines3 (>=2.8.0,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "tqdm",
    "rich"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
