[project]
name = "challenge2-ssl-acs"
version = "0.1.0"
description = "ML Challenge 2 — Semi-Supervised Learning sobre ACS PUMS 2022, Grupo 6, Universidad Distrital Francisco Jose de Caldas"
authors = [
    {name = "Prof. Carlos Andres Sierra", email = "cavirguezs@udistrital.edu.co"}
]
license = {text = "GNU/GPL 3.0"}
requires-python = ">=3.10"

# ── Dependencias ──────────────────────────────────────────────────────────────
# Versiones verificadas en Windows con Python 3.10.
#
# Instalacion rapida:
#   pip install -e .
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    # Datos y numerica
    "pandas>=2.0",
    "numpy>=1.24",

    # Machine learning
    "scikit-learn>=1.3",
    "joblib>=1.3",

    # Visualizacion
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # Descarga del dataset ACS PUMS
    "requests>=2.31",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ── Scripts de entrada ────────────────────────────────────────────────────────
# Uso principal:
#   python main_experiment.py                            # corre todos los experimentos (4 clases)
#   python main_experiment.py --experiment baseline_lr  # corre uno
#   python main_experiment.py --replot --results-dir results_final
#   python main_experiment_binary.py                    # version binaria (sobre/bajo la mediana)
# ────────────────────────────────────────────────────────────────────────────
